--- a/src/scss/src/components/_projectcard.scss
+++ b/src/scss/src/components/_projectcard.scss
@@ -61,6 +61,10 @@
                 transition-delay: 0ms;
                 opacity: 0;
             }
+            & .project__description {
+                transition-delay: 0ms;
+                opacity: 0;
+            }
             & .project__link {
                 transition: color 350ms, opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
                 opacity: 1;
@@ -74,24 +78,47 @@
                 & .project__name {
                     opacity: 1;
                 }
+                & .project__description {
+                    opacity: 1;
+                }
             }
         }
     }
 
     &__name {
+        position: absolute;
+        top: 10%;
         font-size: 1.8rem;
         font-family: $--ff-Exo2;
         font-weight: normal;
         color: $--clr-white;
         opacity: 1;
         transition: opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
+        @media screen and (max-width: 1300px){
+            font-size: 1.6rem;
+        }
         @media screen and (max-width: 1000px){
-            position: absolute;
-            top: 20px;
             font-size: 1.5rem;
         }
         @media screen and (max-width: 800px){
             font-size: 1.3rem;
+        }
+    }
+
+    &__description {
+        position: absolute;
+        top: 65%;
+        font-size: 1.2rem;
+        font-family: $--ff-Exo2;
+        font-weight: normal;
+        color: $--clr-white;
+        opacity: 1;
+        transition: opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
+        @media screen and (max-width: 1300px){
+            font-size: 1rem;
+        }
+        @media screen and (max-width: 600px){
+            font-size: 0.9rem;
         }
     }
 
