--- a/src/scss/src/base/_typography.scss
+++ b/src/scss/src/base/_typography.scss
@@ -52,14 +52,29 @@ p {
     }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 600px){
     h1 {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
     }
     h2 {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
     }
-    p {
-        font-size: 1rem;
+}
+
+@media screen and (max-width: 500px){
+    h1 {
+        font-size: 2.3rem;
+    }
+    h2 {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 400px){
+    h1 {
+        font-size: 2.1rem;
+    }
+    h2 {
+        font-size: 1.8rem;
     }
 }
