--- a/src/scss/src/components/_projectcard.scss
+++ b/src/scss/src/components/_projectcard.scss
@@ -7,9 +7,9 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, 25%);
         margin: 0 50px;
+        padding-top: 20px;
         position: relative;
         border-radius: 3px;
-        overflow: hidden;
         opacity: 0.99;
         @media screen and (max-width: 1000px){
             grid-template-columns: repeat(auto-fill, 33%);
@@ -20,8 +20,9 @@
         @media screen and (max-width: 700px) {
             margin: 0 35px;
         }
-        @media screen and (max-width: 480px) {
+        @media screen and (max-width: 600px) {
             margin: 0 20px;
+            grid-template-columns: repeat(auto-fill, 100%);
         }
     }
 
@@ -32,129 +33,85 @@
         align-items: center;
         aspect-ratio: 1;
         position: relative;
-        z-index: 1;
-        overflow: visible;
         padding: 15px;
         text-align: center;
         background-color: $--clr-darkblue-projectcard;
-        transition: background-color 350ms;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            background: 
-                url('/src/img/GitHub-Mark-120px-plus.png')  
-                center 
-                no-repeat;
-            transition: all 350ms;
-        }
+        transition: scale 350ms, background-color 350ms;
         &:hover {
-            background-color: $--clr-darkblue-background;
-            &::before {
-                transform: scale(1.1);
-            }
-            & .project__name {
-                transition-delay: 0ms;
-                opacity: 0;
-            }
-            & .project__description {
-                transition-delay: 0ms;
-                opacity: 0;
-            }
-            & .project__link {
-                transition: color 350ms, opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
-                opacity: 1;
+            @media screen and (min-width: 800px) {
+                scale: 1.1;
+                background-color: $--clr-darkblue-background;
             }
         }
-        @media screen and (max-width: 1000px){
-            &:hover {
-                &::before {
-                    transform: scale(1);
-                }
-                & .project__name {
-                    opacity: 1;
-                }
-                & .project__description {
-                    opacity: 1;
-                }
-            }
+        @media screen and (max-width: 600px) {
+            aspect-ratio: 4;
+        }
+        @media screen and (max-width: 500px) {
+            aspect-ratio: 3;
+        }
+        @media screen and (max-width: 400px) {
+            aspect-ratio: 3;
         }
     }
 
     &__name {
         position: absolute;
         top: 10%;
-        font-size: 1.8rem;
+        font-size: 2.2rem;
         font-family: $--ff-Exo2;
         font-weight: normal;
-        color: $--clr-white;
-        opacity: 1;
-        transition: opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
+        color: $--clr-accent-yellow;
+        @media screen and (max-width: 1600px){
+            font-size: 1.9rem;
+        }
         @media screen and (max-width: 1300px){
             font-size: 1.6rem;
         }
         @media screen and (max-width: 1000px){
             font-size: 1.5rem;
         }
-        @media screen and (max-width: 800px){
+        @media screen and (max-width: 600px){
+            font-size: 1.5rem;
+        }
+        @media screen and (max-width: 500px){
+            font-size: 1.4rem;
+        }
+        @media screen and (max-width: 400px){
             font-size: 1.3rem;
         }
     }
 
     &__description {
         position: absolute;
-        top: 65%;
-        font-size: 1.2rem;
+        top: 45%;
+        padding: 0 5px;
+        font-size: 1.5rem;
         font-family: $--ff-Exo2;
         font-weight: normal;
         color: $--clr-white;
-        opacity: 1;
-        transition: opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43) 200ms;
+        @media screen and (max-width: 1600px){
+            font-size: 1.4rem;
+        }
         @media screen and (max-width: 1300px){
-            font-size: 1rem;
+            font-size: 1.3rem;
+        }
+        @media screen and (max-width: 1000px){
+            font-size: 1.2rem;
         }
         @media screen and (max-width: 600px){
-            font-size: 0.9rem;
+            margin: 0;
+        }
+        @media screen and (max-width: 500px){
+            font-size: 1.1rem;
+        }
+        @media screen and (max-width: 400px){
+            font-size: 1rem;
         }
     }
 
     &__link {
         position: absolute;
-        justify-self: center;
-        align-self: center;
-        padding: 20px;
-        font-size: 1.6rem;
-        font-family: $--ff-Exo2;
-        color: $--clr-white;
-        text-decoration: none;
-        opacity: 0;
-        transition: color 350ms, opacity 150ms cubic-bezier(0.75, 0.24, 0.84, 0.43);
-        &:hover {
-            color: $--clr-accent-yellow;
-        }
-        @media screen and (max-width: 1000px){
-            position: absolute;
-            justify-self: center;
-            align-self: center;
-            padding: 50%;
-            opacity: 1;
-            color: $--clr-accent-yellow;
-            font-size: 1.3rem;
-        }
-        @media screen and (max-width: 800px){
-            font-size: 1.1rem;
-        }
+        width: 100%;
+        height: 100%;
     }
 }
-
-// .Leetcode {
-//     background-image: url();
-// }
-
-// .Crypto {
-//     background-image: url();
-// }
