added new projects: typeracer, hash-calculator, wordle

--- a/src/scss/src/main.scss
+++ b/src/scss/src/main.scss
@@ -10,7 +10,9 @@
 @import 'layouts/page';
 
 @import 'pages/about';
+@import 'pages/hashcalculator';
 @import 'pages/home';
 @import 'pages/projects';
 @import 'pages/impressum';
 @import 'pages/typeracer';
+@import 'pages/wordle';
