--- a/src/scss/src/utilities/_colors.scss
+++ b/src/scss/src/utilities/_colors.scss
@@ -10,7 +10,9 @@ $--clr-tags-comment: hsl(0, 0%, 39%);
 $--clr-darkblue-background: hsl(221, 28%, 16%);
 $--clr-darkblue-content: hsl(222, 27%, 12%);
 $--clr-darkblue-projectcard: hsl(221, 30%, 23%);
+$--clr-light-blue-wordle: hsl(221, 44%, 59%);
 $--clr-light-blue: hsl(224, 25%, 79%);
 $--clr-white: hsl(60, 28%, 92%);
 $--clr-accent-yellow: hsl(43, 97%, 72%);
 $--clr-accent-white: hsl(174, 50%, 92%);
+$--clr-accent-green:rgb(6, 170, 102);
