--- a/src/scss/src/components/_projectcard.scss
+++ b/src/scss/src/components/_projectcard.scss
@@ -27,20 +27,24 @@
     }
 
     &__container {
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 30px;
         aspect-ratio: 1;
-        position: relative;
-        padding: 15px;
         text-align: center;
         background-color: $--clr-darkblue-projectcard;
-        transition: scale 350ms, background-color 350ms;
+        overflow: visible;
+        z-index: -1;
+        transition: scale 350ms, background-color 350ms, transform 350ms;
+        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
         &:hover {
             @media screen and (min-width: 800px) {
-                scale: 1.1;
-                background-color: $--clr-darkblue-background;
+                scale: 1.08;
+                background-color: lighten($color: $--clr-darkblue-projectcard, $amount: 6);
+                z-index: 1;
             }
         }
         @media screen and (max-width: 600px) {
@@ -61,6 +65,7 @@
         font-family: $--ff-Exo2;
         font-weight: normal;
         color: $--clr-accent-yellow;
+        overflow: visible;
         @media screen and (max-width: 1600px){
             font-size: 1.9rem;
         }
@@ -84,18 +89,18 @@
     &__description {
         position: absolute;
         top: 45%;
-        padding: 0 5px;
         font-size: 1.5rem;
         font-family: $--ff-Exo2;
         font-weight: normal;
         color: $--clr-white;
+        overflow: visible;
         @media screen and (max-width: 1600px){
             font-size: 1.4rem;
         }
         @media screen and (max-width: 1300px){
             font-size: 1.3rem;
         }
-        @media screen and (max-width: 1000px){
+        @media screen and (max-width: 1100px){
             font-size: 1.2rem;
         }
         @media screen and (max-width: 600px){
