update to latest state

--- a/src/scss/src/utilities/_fonts.scss
+++ b/src/scss/src/utilities/_fonts.scss
@@ -1,4 +1,4 @@
-$--ff-OpenSans: 'Open Sans Condensed', sans-serif;
+$--ff-OpenSans: 'Open Sans', sans-serif;
 $--ff-ProzaLibre: 'Proza Libre', sans-serif;
 $--ff-Exo2: 'Exo 2', sans-serif;
 $--ff-Calligraffitti: 'Calligraffitti', cursive;
