--- a/src/scss/src/pages/_wordle.scss
+++ b/src/scss/src/pages/_wordle.scss
@@ -7,6 +7,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        height: 100vh;
     }
 
     &__topbar {
@@ -85,36 +86,32 @@
     }
 
     &__board {
-        margin: 50px;
-        margin-top: 0;
-        @media screen and (max-width: 750px) {
-            margin: 30px;
-            margin-top: 0;
-        }
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        padding: 10px;
+        width: 350px;
+        height: 420px;
+        margin-bottom: 20px;
+        box-sizing: border-box;
         &__row {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
         }
     
         &__tile {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 55px;
-            height: 55px;
-            margin: 8px;
-            font-size: 30px;
-            font-weight: 600;
+            width: 62px;
+            height: 62px;
+            margin: 2px;
+            font-size: 36px;
+            font-weight: bold;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-transform: uppercase;
-            border: 3px solid darken($color: $--clr-darkblue-content, $amount: 4);
-            border-radius: 2px;
+            border: 0;
+            border-radius: 1px;
             background-color: $--clr-accent-white;
-            @media screen and (max-width: 750px) {
-                width: 45px;
-                height: 45px;
-                margin: 8px;
-                font-size: 24px;
-            }
             &.correct {
                 background-color: $--clr-accent-green;
             }
@@ -132,28 +129,20 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        margin: 20px;
-        @media screen and (max-width: 750px) {
-            margin: 6px;
-        }
         &__row {
-
+            margin: 0 auto 4px;
         }
         &__key {
-            min-width: 35px;
-            padding: 8px;
-            margin: 2px;
+            min-width: 30px;
+            height: 58px;
+            padding: 0;
+            margin: 0 4px 0 0;
             background-color: $--clr-accent-white;
-            font-size: 20px;
+            font-size: 26px;
             color: black;
-            border: 2px solid $--clr-darkblue-content;
+            border: 0;
             border-radius: 4px;
-            @media screen and (max-width: 750px) {
-                min-width: 25px;
-                padding: 8px;
-                margin: 2px;
-                font-size: 16px;
-            }
+            text-transform: uppercase;
             &.correct {
                 background-color: $--clr-accent-green;
             }
